--- a/02-nginx.yml
+++ b/02-nginx.yml
@@ -7,7 +7,7 @@
       state: present
 
   - name: start nginx
-    ansible.builtin.server:
+    ansible.builtin.service:
       name: nginx
       state: started
       enabled: yes
