--- a/04-variables.yml
+++ b/04-variables.yml
@@ -8,4 +8,4 @@
   tasks:
   - name: print the course info
     ansible.builtin.debug:
-      msg: "Course Name is: {{ COURSE }},Duration: {{ DURATION }}, TRAINER: {{ TRAINER }}"
+      msg: "Course Name is: {{ COURSE }} Duration: {{ DURATION }}, TRAINER: {{ TRAINER }}"
