--- a/05-tasklevel-variables.yml
+++ b/05-tasklevel-variables.yml
@@ -6,6 +6,8 @@
     Duration: 5-Hours
     Trainer: KiranKumar
   tasks:
-    - name: print course info
+  - name: print course info
+    vars:
+      course: Ansible
       ansible.builtin.debug:
         msg: "Couse Name is: {{ Course }}, Duration {{ Duration }}, Trainer {{ Trainer }}"
