--- a/05-tasklevel-variables.yml
+++ b/05-tasklevel-variables.yml
@@ -10,4 +10,4 @@
     vars:
       Course: Ansible
     ansible.builtin.debug:
-        msg: "Couse Name is: {{ Course }}, Duration {{ Duration }}, Trainer {{ Trainer }}"
+        msg: "Course Name is: {{ Course }}, Duration {{ Duration }}, Trainer {{ Trainer }}"
