--- a/07-variables-prompt.yml
+++ b/07-variables-prompt.yml
@@ -6,7 +6,11 @@
     prompt: What is your name?
     private: false
 
+  - name: password
+    prompt: What is your password?
+    private: true
+
   tasks:
   - name: print credentials
     ansible.builtin.debug:
-      msg: "Hello, Username is: {{ username }}"
+      msg: "Hello, Username is: {{ username }}, password is: {{ password }}"
