--- a/08-variables-inventory.yml
+++ b/08-variables-inventory.yml
@@ -4,4 +4,4 @@
   tasks:
     - name: print course info
       ansible.builtin.debug:
-        msg: "Couse Name is: {{ Course }}, Duration {{ Duration }}, Trainer {{ TRAINER }}"
+        msg: "Couse Name is: {{ COURSSE }}, Duration {{ Duration }}, Trainer {{ TRAINER }}"
