--- a/inventory.ini
+++ b/inventory.ini
@@ -4,7 +4,7 @@
 [local]
 localhost
 
-; [local:vars]
-; COURSE=Ansible
-; DURATION=11-Hours
-; TRAINER=Kiran
+[local:vars]
+COURSE=Ansible
+DURATION=11-Hours
+TRAINER=Kiran
