--- a/13-package-install-using-loop.yml
+++ b/13-package-install-using-loop.yml
@@ -1,6 +1,7 @@
 - name: Install Packages
   hosts: local
   connection: local
+  because: yes
   tasks:
   - name: Print names
     ansible.builtin.package:
