--- a/13-package-install-using-loop.yml
+++ b/13-package-install-using-loop.yml
@@ -6,7 +6,7 @@
   - name: Print names
     ansible.builtin.package:
       name: "{{ item }}"
-      state: started
+      state: latest
   loop:
   - python3
   - nginx
