--- a/14-loops.yml
+++ b/14-loops.yml
@@ -1,14 +1,13 @@
-- name: Install Packages
+- name: Install pacakges
   hosts: local
   connection: local
   become: yes
   tasks:
-  - name: Print names
+  - name: print names
     ansible.builtin.package:
       name: "{{ item.name }}"
       state: "{{ item.state }}"
     loop:
-    - {name: "python3", state:"absent"}
-    - {name: "nginx", state:"absent"}
-    - {name: "mysql", state:"latest"}
-    
+    - { name: "nginx", state: "absent"}
+    - { name: "mysql", state: "absent"}
+    - { name: "zip", state: "latest"}
