--- a/01-playbook.yml
+++ b/01-playbook.yml
@@ -1,6 +1,12 @@
+# - name: ping the server
+#   hosts: frontend
+
+#   tasks:
+#   - name: ping
+#     ansible.builtin.ping:
+
 - name: ping the server
   hosts: frontend
-  
   tasks:
   - name: ping
     ansible.builtin.ping:
