--- a/02-nginx.yml
+++ b/02-nginx.yml
@@ -1,15 +1,28 @@
-- name: Installing Nginx
-  hosts: frontend
-  become: yes
-  tasks:
-  - name: install nginx
-    ansible.builtin.package:
-      name: nginx
-      state: present
+# - name: Installing Nginx
+#   hosts: frontend
+#   become: yes
+#   tasks:
+#   - name: install nginx
+#     ansible.builtin.package:
+#       name: nginx
+#       state: present
 
   
-  - name: start nginx
-    ansible.builtin.service:
-      name: nginx
-      state: started
-      enabled: yes
+#   - name: start nginx
+#     ansible.builtin.service:
+#       name: nginx
+#       state: started
+#       enabled: yes
+
+- name: install nginx
+  hosts: frontend
+  tasks:
+  - name: install
+  ansible.builtin.package:
+    name: nginx
+    state: present
+
+- name: start nginx
+  ansible.builtin.service:
+    name: nginx
+    start: started
