--- a/02-nginx.yml
+++ b/02-nginx.yml
@@ -26,5 +26,5 @@
   - name: start nginx
     ansible.builtin.service:
       name: nginx
-      start: started
+      state: started
       enabled: yes
