--- a/15-functions.yml
+++ b/15-functions.yml
@@ -6,7 +6,7 @@
   tasks: 
   - name: default variables 
     ansible.builtin.debug:
-      msg: "Hello, {{ name }}"
+      msg: "Hello, {{ name | default('Kiran') }}"
 
   - name: convert string to list
     ansible.builtin.debug:
