--- a/15-functions.yml
+++ b/15-functions.yml
@@ -17,4 +17,4 @@
 
   - name: convert map to list
     ansible.builtin.debug:
-      msg: "Tags are: {{ tags | dict2list }}"
+      msg: "Tags are: {{ tags | dict2items }}"
