--- a/05-tasklevel-variables.yml
+++ b/05-tasklevel-variables.yml
@@ -1,27 +1,13 @@
-# - name: Task Level Variables
-#   hosts: local
-#   connection: local
-#   vars:
-#     Course: DevOps with AWS
-#     Duration: 5-Hours
-#     Trainer: KiranKumar
-#   tasks:
-#   - name: print course info
-#     vars:
-#       Course: Ansible
-#     ansible.builtin.debug:
-#         msg: "Course Name is: {{ Course }}, Duration {{ Duration }}, Trainer {{ Trainer }}"
-
-- name: Task level variables
+- name: play level variables
   hosts: local
-  connection: local
+  connection: local # Ansible is connecting to localhost
   vars:
-    Course: DevOps
-    Duration: 5-Hours
-    Trainer: kiran
+    COURSE: DevOps with AWS
+    DURATION: 10HRS
+    Trainer: "Kirankumar"
   tasks:
-  - name: print course info
+  - name: print the course info
     vars:
-      Course: Ansible
+      COURSE: Ansible
     ansible.builtin.debug:
-      msg: "Course Name is: {{ Course }}, Duration {{ Duration }}, Trainer {{ Trainer }}"
+      msg: "Course Name is: {{ COURSE }}, Duratioin: {{ DURATION }}, Trainer: {{ Trainer }}"
