--- a/01-playbook.yml
+++ b/01-playbook.yml
@@ -1,12 +1,6 @@
-# - name: ping the server
-#   hosts: frontend
-
-#   tasks:
-#   - name: ping
-#     ansible.builtin.ping:
-
-- name: ping the server
-  hosts: frontend
+- name: "ping the server"
+  hosts: frontend # Which server you are connecting to
+  # List of tasks/collections/modules
   tasks:
   - name: ping
     ansible.builtin.ping:
