--- a/03-multiplay.yml
+++ b/03-multiplay.yml
@@ -9,6 +9,9 @@
     ansible.builtin.debug:
       msg: "Hello from PLAY-01 and TASK-02"
 
+- name: PLAY-02
+  hosts: frontend
+  tasks:
   - name: PLAY-02 and TASK-01
     ansible.builtin.debug:
       msg: "Hello from PLAY-02 and TASK-01"
