--- a/04-variables.yml
+++ b/04-variables.yml
@@ -1,25 +1,11 @@
-# - name: Play Level Variables
-#   hosts: local
-#   connection: local
-#   vars:
-#     Course: Ansible
-#     Duration: 5-Hours
-#     Trainer: KiranKumar
-#   tasks:
-#     - name: print course info
-#       ansible.builtin.debug:
-#         msg: "Couse Name is: {{ Course }}, Duration {{ Duration }}, Trainer {{ Trainer }}"
-
- - name: Play level variables
-   hosts: local
-   connection: local
-   vars:
-    Course: Ansible
-    Duration: 5-Hours
-    Trainer: kiran
-   tasks:
-   - name: print the info
-     ansible.builtin.debug:
-      msg: "Course Name is: {{ Course }}, Duration {{ Duration }}, Trainer {{ Trainer }}"
-
-
+- name: play level variables
+  hosts: local
+  connection: local # Ansible is connecting to localhost
+  vars:
+    COURSE: Ansible
+    DURATION: 10HRS
+    Trainer: "Kirankumar"
+  tasks:
+  - name: print the course info
+    ansible.builtin.debug:
+      msg: "Course Name is: {{ COURSE }}, Duratioin: {{ DURATION }}, Trainer: {{ Trainer }}"
